--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,12 @@
     <title>DBZ Memory Game</title>
     <!-- Boostrap link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  </head>
-  <body>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:900|Coming+Soon" rel="stylesheet">  </head>
+    <!-- Micron (clicks effects) -->
+    <link href="https://unpkg.com/webkul-micron@1.1.6/dist/css/micron.min.css" type="text/css" rel="stylesheet">
+    <script src="https://unpkg.com/webkul-micron@1.1.6/dist/script/micron.min.js" type="text/javascript"></script>
+    <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
